--- a/2 Unit One Content/Measures of Variation.html
+++ b/2 Unit One Content/Measures of Variation.html
@@ -119,8 +119,7 @@
                             If we add that value of 7.0 to those listed in the data set, do the measures of variation
                             change much?</p>
                         <p>Because of the amount of data, this dataset is omitted from viewing, but can be viewed
-                            visually
-                            in a scrollable table by clicking the button below or by downloading the data here: <a
+                            visually in a scrollable table by clicking the button below or by downloading the data here: <a
                                 href="../datasets/24_Earthquakestxt.csv" download>Download Earthquake Data</a>.</p>
                         <button aria-describedby="tableDescription"
                             onclick="generateTable('../datasets/24_Earthquakestxt.csv', 'Table 2: Magnitude and Depth Data')">View
