Renaming a file, Structuring the Index, Making the "next page" and "previous page" buttons work.

--- a/1 Start Here/Content_Page_Template.html
+++ b/1 Start Here/Content_Page_Template.html
@@ -29,7 +29,8 @@
         <main>
             <div class="row bottom-md">
                 <div class="col-sm-offset-1 col-xs-offset-1 col-xs-10">
-
+<h1>Sample Page HTML for Project</h1>
+<p>Blah Blah</p>
                 </div>
             </div>
         </main>
