--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="../js/loadmathjax.js"></script>
+<script src="../js/navigation.js"></script>
 
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 
@@ -24,25 +25,74 @@
 <div class="row bottom-md">
 <div class="col-sm-offset-1 col-xs-offset-1 col-xs-10">
     <header>
-        <h1>Welcome to My Website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </nav>
+        <h1>OER Introductory Statistics using GeoGebra</h1>
     </header>
 
     <main>
         <section>
-            <h2>Introduction</h2>
-            <p>This is the homepage of my awesome website. Explore the links to learn more!</p>
+            <h2>Start Here</h2>
+            <ul>
+                <li><a href="1 Start Here/Content_Page_Template.html">Content Page Template</a></li>
+                <li><a href="1 Start Here/Objectives.html">Objectives</a></li>
+            </ul>
         </section>
+
+        <section>
+            <h2>Unit One Content</h2>
+            <ul>
+                <li><a href="2 Unit One Content/Data Levels of Measurement and Sampling.html">Data Levels of Measurement and Sampling</a></li>
+                <li><a href="2 Unit One Content/Introductory Terms and Concepts for Statistics.html">Introductory Terms and Concepts for Statistics</a></li>
+                <li><a href="2 Unit One Content/Measures of Center.html">Measures of Center</a></li>
+                <li><a href="2 Unit One Content/Measures of Location.html">Measures of Location</a></li>
+                <li><a href="2 Unit One Content/Measures of Variation.html">Measures of Variation</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Unit Two Content</h2>
+            <ul>
+                <li><a href="3 Unit Two Content/Addition Rule for Probability.html">Addition Rule for Probability</a></li>
+                <li><a href="3 Unit Two Content/Binomial Probability Distributions.html">Binomial Probability Distributions</a></li>
+                <li><a href="3 Unit Two Content/Conditional Probability and At Least One.html">Conditional Probability and At Least One</a></li>
+                <li><a href="3 Unit Two Content/Introduction to Probability Distributions.html">Introduction to Probability Distributions</a></li>
+                <li><a href="3 Unit Two Content/Introduction to Probability Theory.html">Introduction to Probability Theory</a></li>
+                <li><a href="3 Unit Two Content/Multiplication Rule for Probability.html">Multiplication Rule for Probability</a></li>
+                <li><a href="3 Unit Two Content/Normal Probability Distributions.html">Normal Probability Distributions</a></li>
+                <li><a href="3 Unit Two Content/Uniform Probability Distributions.html">Uniform Probability Distributions</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Unit Three Content</h2>
+            <ul>
+                <li><a href="4 Unit Three Content/Estimating a Population Mean.html">Estimating a Population Mean</a></li>
+                <li><a href="4 Unit Three Content/Estimating Population Proportions.html">Estimating Population Proportions</a></li>
+                <li><a href="4 Unit Three Content/Hypothesis Testing for Population Means and Population Proportions.html">Hypothesis Testing for Population Means and Population Proportions</a></li>
+                <li><a href="4 Unit Three Content/Introduction to Hypothesis Testing.html">Introduction to Hypothesis Testing</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Final Exam</h2>
+            <ul>
+                <li><a href="#">Coming Soon</a></li>
+            </ul>
+        </section>
+
+        <div>
+            <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+<button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
+        <p>&copy; 2025 OER Introductory Statistics. All rights reserved.</p>
     </footer>
 </div>
 </div>
